--- a/public/BookNow.css
+++ b/public/BookNow.css
@@ -5,45 +5,41 @@ margin: 0%;
 background-color: #1C1917;
 scroll-behavior: smooth;
 }
- .navbar{
-background-color: #FFFFFF;
-display:flex;
-height: 37px;
-border-radius: 50px;
-margin: 11px;
-position:fixed;
-width: 99%;
+.navbar {
+   background-color: #FFFFFF;
+   display: flex;
+   height: 37px;
+   border-radius: 50px;
+   margin: 11px;
+   position: fixed;
+   width: 99%;
+   padding: 10px 3px;
+}
 
-
- }
-
- .material-symbols-outlined{
+.material-symbols-outlined {
    position: absolute;
-    top: 7px;
-    left: 47%;
-    
-
-
- }
+   top: 17px;
+   left: 47%;
+}
 
 
 
-.left-A a{
-    justify-content: space-between;
-    padding: 10px;
-    color: black;
-    text-decoration: none;
-    font-family: "Open Sans", sans-serif;
-    font-size: 15px;
-    position: relative;
-    left: 20%;
-    top: 6px;
-    
- }
+.left-A a {
+   justify-content: space-between;
+   padding: 10px;
+   color: black;
+   text-decoration: none;
+   font-family: "Open Sans", sans-serif;
+   font-size: 15px;
+   position: relative;
+   left: 20%;
+   top: 6px;
+   font-size: 20px;
+}
 
 
 
- .R-A a{
+.R-A a {
    justify-content: space-between;
    color: black;
    text-decoration: none;
@@ -52,24 +48,22 @@ width: 99%;
    position: relative;
    left: 1500px;
    top: 6px;
-   
+   font-size: 20px;
 }
 
 
 
- .LOGO h1{
-    color: black;
-    text-decoration: none;
-    font-family: "Open Sans", sans-serif;
-    font-size: 17px;
-    
-
-    float: none;
-    position: absolute;
-    top: 7px;
-    left: 50%;
-    transform: translate(-50%, -50%);
- }
+.LOGO h1 {
+   color: black;
+   text-decoration: none;
+   font-family: "Open Sans", sans-serif;
+   font-size: 20px;
+   float: none;
+   position: absolute;
+   top: 17px;
+   left: 50%;
+   transform: translate(-50%, -50%);
+}
  .Starting-Home{
   padding: 90px;
 
