--- a/public/Style.css
+++ b/public/Style.css
@@ -1,49 +1,46 @@
-html,body
-{
-padding: 0%;
-margin: 0%;
-background-color: #1C1917;
-scroll-behavior: smooth;
+html,
+body {
+   padding: 0%;
+   margin: 0%;
+   background-color: #1C1917;
+   scroll-behavior: smooth;
 }
- .navbar{
-background-color: #FFFFFF;
-display:flex;
-height: 37px;
-border-radius: 50px;
-margin: 11px;
-position:fixed;
-width: 99%;
 
+.navbar {
+   background-color: #FFFFFF;
+   display: flex;
+   height: 37px;
+   border-radius: 50px;
+   margin: 11px;
+   position: fixed;
+   width: 99%;
+   padding: 10px 3px;
+}
 
- }
-
- .material-symbols-outlined{
+.material-symbols-outlined {
    position: absolute;
-    top: 7px;
-    left: 47%;
-    
-
-
- }
+   top: 17px;
+   left: 47%;
+}
 
 
 
-.left-A a{
-    justify-content: space-between;
-    padding: 10px;
-    color: black;
-    text-decoration: none;
-    font-family: "Open Sans", sans-serif;
-    font-size: 15px;
-    position: relative;
-    left: 20%;
-    top: 6px;
-    
- }
+.left-A a {
+   justify-content: space-between;
+   padding: 10px;
+   color: black;
+   text-decoration: none;
+   font-family: "Open Sans", sans-serif;
+   font-size: 15px;
+   position: relative;
+   left: 20%;
+   top: 6px;
+   font-size: 20px;
+}
 
 
 
- .R-A a{
+.R-A a {
    justify-content: space-between;
    color: black;
    text-decoration: none;
@@ -52,38 +49,36 @@ width: 99%;
    position: relative;
    left: 1500px;
    top: 6px;
-   
+   font-size: 20px;
 }
 
 
 
- .LOGO h1{
-    color: black;
-    text-decoration: none;
-    font-family: "Open Sans", sans-serif;
-    font-size: 17px;
-    
-
-    float: none;
-    position: absolute;
-    top: 7px;
-    left: 50%;
-    transform: translate(-50%, -50%);
- }
+.LOGO h1 {
+   color: black;
+   text-decoration: none;
+   font-family: "Open Sans", sans-serif;
+   font-size: 20px;
+   float: none;
+   position: absolute;
+   top: 17px;
+   left: 50%;
+   transform: translate(-50%, -50%);
+}
 
 
- .Starting-Home{
-  padding: 90px;
+.Starting-Home {
+   padding: 90px;
 
- }
+}
 
 
 
 
- 
- 
 
- .TEXT1  {
+
+
+.TEXT1 {
    color: #E7E5E4;
    font-family: "Domine", serif;
    font-size: 64px;
@@ -91,48 +86,48 @@ width: 99%;
 }
 
 
-.TEXT2 h2{
+.TEXT2 h2 {
    font-size: 29px;
    font-weight: lighter;
    font-family: "Open Sans", sans-serif;
    color: #E7E5E4;
-   
+
 }
 
 
-.Starting-Home a{
-   display: inline-block; 
+.Starting-Home a {
+   display: inline-block;
    background-color: #EC4899;
    color: #E7E5E4;
    border-radius: 6px;
-   width: 360px; 
-   height: 59px; 
-   text-align: center; 
-   line-height: 59px; 
+   width: 360px;
+   height: 59px;
+   text-align: center;
+   line-height: 59px;
    text-decoration: none;
-   }
-   
-   .Starting-Home a:hover{
-      cursor: pointer;
-   }
+}
+
+.Starting-Home a:hover {
+   cursor: pointer;
+}
 
 
 
-.HOME-VIDEO{
-  
-   position:static;
+.HOME-VIDEO {
+
+   position: static;
    padding-left: 60%;
    margin-top: -760px;
-   
-   
+
+
 }
 
 
-.HOME-VIDEO video{
+.HOME-VIDEO video {
    border-radius: 32px;
    width: 77%;
-   
-   
+
+
 }
 
 
@@ -143,7 +138,7 @@ width: 99%;
 
 
 
-.three-steps{
+.three-steps {
    background-color: #E7E5E4;
    padding-top: 18px;
    padding-left: 75PX;
@@ -152,7 +147,7 @@ width: 99%;
 
 
 
-.main-title h1{
+.main-title h1 {
    font-family: "Domine", serif;
    font-size: 74px;
    font-weight: lighter;
@@ -160,195 +155,138 @@ width: 99%;
 
 
 
-.first-step{
-display: flex;
+.first-step {
+   display: flex;
 }
 
-.first-step h1{
-   
+.first-step h1 {
+
    font-family: "Domine", serif;
    font-size: 108px;
    font-weight: lighter;
 }
-.first-step h2{
+
+.first-step h2 {
    position: relative;
-    left: 30%;
-    top: 70px;
-    font-family: "Open Sans", sans-serif;
-    font-size: 20px;
+   left: 30%;
+   top: 70px;
+   font-family: "Open Sans", sans-serif;
+   font-size: 20px;
 }
 
-.first-step h3{
+.first-step h3 {
    position: relative;
-    left: 23.3%;
-    top: 106px;
-    font-family: "Open Sans", sans-serif;
-    font-size: 20px;
-    color: #a8a29e;
-    font-weight: lighter;
-   }
+   left: 23.3%;
+   top: 106px;
+   font-family: "Open Sans", sans-serif;
+   font-size: 20px;
+   color: #a8a29e;
+   font-weight: lighter;
+}
 
 
 
 
 
 
- .second-step{
+.second-step {
    display: flex;
-   }
-   
-   .second-step h1{
-      
-      font-family: "Domine", serif;
-      font-size: 108px;
-      font-weight: lighter;
-   }
-   .second-step h2{
-      position: relative;
-       left: 29%;
-       top: 70px;
-       font-family: "Open Sans", sans-serif;
-       font-size: 20px;
-   }
-   
-   .second-step h3{
-      position: relative;
-       left: 20.2%;
-       top: 106px;
-       font-family: "Open Sans", sans-serif;
-       font-size: 20px;
-       color: #a8a29e;
-       font-weight: lighter;
-   }
+}
+
+.second-step h1 {
+
+   font-family: "Domine", serif;
+   font-size: 108px;
+   font-weight: lighter;
+}
+
+.second-step h2 {
+   position: relative;
+   left: 29%;
+   top: 70px;
+   font-family: "Open Sans", sans-serif;
+   font-size: 20px;
+}
+
+.second-step h3 {
+   position: relative;
+   left: 20.2%;
+   top: 106px;
+   font-family: "Open Sans", sans-serif;
+   font-size: 20px;
+   color: #a8a29e;
+   font-weight: lighter;
+}
 
 
 
 
 
-     .third-step{
-      display: flex;
-      }
-      
-      .third-step h1{
-         
-         font-family: "Domine", serif;
-         font-size: 108px;
-         font-weight: lighter;
-      }
-      .third-step h2{
-         position: relative;
-          left: 29.1%;
-          top: 70px;
-          font-family: "Open Sans", sans-serif;
-          font-size: 20px;
-      }
-      
-      .third-step h3{
-         position: relative;
-          left: 20.8%;
-          top: 106px;
-          font-family: "Open Sans", sans-serif;
-          font-size: 20px;
-          color: #a8a29e;
-          font-weight: lighter;
-      }
-   
+.third-step {
+   display: flex;
+}
 
+.third-step h1 {
 
+   font-family: "Domine", serif;
+   font-size: 108px;
+   font-weight: lighter;
+}
 
-      .Main_holder{
-         
-         display: grid;
-         grid-template-columns: auto auto ;
-      }
-      
+.third-step h2 {
+   position: relative;
+   left: 29.1%;
+   top: 70px;
+   font-family: "Open Sans", sans-serif;
+   font-size: 20px;
+}
 
-
-      .holder{
-         display: flex;
-         padding: 2%;
-         justify-content: center;
-      }
-      .holder_words {
-         padding: 3%;
-         display: grid;
-         justify-content: center;
-         color: white;
-       }
-       
-       .holder_words h3 {
-         margin: 0;
-       }
-
-      select{
-         border:none;
-         border-radius: 7px;
-         height: 50px;
-         padding: 6px;
-         margin-left: 15px;
-         margin-right: 10px;
-      }
-         
-        
+.third-step h3 {
+   position: relative;
+   left: 20.8%;
+   top: 106px;
+   font-family: "Open Sans", sans-serif;
+   font-size: 20px;
+   color: #a8a29e;
+   font-weight: lighter;
+}
 
 
 
 
+.Main_holder {
 
-      .creat-acc{
-         padding-top: 99px;
-      }
-
-      
-      .creat-acc h1{
-         padding-left: 36%;
-         color: white;
-         font-family: "Domine", serif;
-         font-size:80px;
-         justify-content: center;
-         padding-top: 39px;
-      }
-      .holder h3{
-        
-         color: white;
-         padding-right: 2%;
-         
-      }
-
-      #emailholder{
-         margin-left: 50px;
-      }
+   display: grid;
+   grid-template-columns: auto auto;
+}
 
 
-      .creat-acc button{
-         background-color: #EC4899;
-         color: #E7E5E4;
-         border-radius: 6px;
-         width: 360px;
-         height: 59px;
-         border-style: none;
-         margin-bottom: 130px;
-         margin-left: 42%;
-         
-      }
 
-      .creat-acc button:hover{
-         cursor: pointer;
-         background-color: white;
-         color: black;
-         border-color: black;
-      }
+.holder {
+   display: flex;
+   padding: 2%;
+   justify-content: center;
+}
 
+.holder_words {
+   padding: 3%;
+   display: grid;
+   justify-content: center;
+   color: white;
+}
 
-      .holder input{
-         border-radius: 20px;
-         padding-right: 17%;
-      }
-      
+.holder_words h3 {
+   margin: 0;
+}
 
-   #agree{
-      margin-left: 90px;
-   }
+select {
+   border: none;
+   border-radius: 7px;
+   height: 50px;
+   padding: 6px;
+   margin-left: 15px;
+   margin-right: 10px;
+}
 
 
 
@@ -356,68 +294,130 @@ display: flex;
 
 
 
+.creat-acc {
+   padding-top: 99px;
+}
+
+
+.creat-acc h1 {
+   padding-left: 36%;
+   color: white;
+   font-family: "Domine", serif;
+   font-size: 80px;
+   justify-content: center;
+   padding-top: 39px;
+}
+
+.holder h3 {
+
+   color: white;
+   padding-right: 2%;
+
+}
+
+#emailholder {
+   margin-left: 50px;
+}
+
+
+.creat-acc button {
+   background-color: #EC4899;
+   color: #E7E5E4;
+   border-radius: 6px;
+   width: 360px;
+   height: 59px;
+   border-style: none;
+   margin-bottom: 130px;
+   margin-left: 42%;
+
+}
+
+.creat-acc button:hover {
+   cursor: pointer;
+   background-color: white;
+   color: black;
+   border-color: black;
+}
+
+
+.holder input {
+   border-radius: 20px;
+   padding-right: 17%;
+}
+
+
+#agree {
+   margin-left: 90px;
+}
 
 
 
-   .contact-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center; 
-      justify-content: center; 
-      height: 600px;
-      background-color: white;
-  }
 
-  .contactus h1{
-      text-align: center; 
-      font-family: "Domine", serif;
-      font-size: 108px;
-      font-weight: lighter;
-  }
 
-  .contactus  h2 {
-   text-align: center; 
+
+
+
+
+
+.contact-container {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   height: 600px;
+   background-color: white;
+}
+
+.contactus h1 {
+   text-align: center;
+   font-family: "Domine", serif;
+   font-size: 108px;
+   font-weight: lighter;
+}
+
+.contactus h2 {
+   text-align: center;
    font-family: "Open Sans", sans-serif;
    font-weight: lighter;
 }
 
-  .contactus input {
-      width: 60%;
-      margin-bottom: 10px; 
-      height: 54px;
-  }
+.contactus input {
+   width: 60%;
+   margin-bottom: 10px;
+   height: 54px;
+}
 
-  .contactus button {
-     
-      background-color: #EC4899;
-         color: #E7E5E4;
-         border-radius: 6px;
-         width: 160px;
-         height: 59px;
-         border-style: none;
-     
-  }
-   
-      
+.contactus button {
+
+   background-color: #EC4899;
+   color: #E7E5E4;
+   border-radius: 6px;
+   width: 160px;
+   height: 59px;
+   border-style: none;
+
+}
 
 
 
 
- @media only screen and (max-width: 600px) {
 
-   .left-A a{
+
+@media only screen and (max-width: 600px) {
+
+   .left-A a {
       justify-content: space-between;
       padding: 10px;
       font-size: 13px;
       position: relative;
       left: 10%;
       top: 6px;
-      
+
    }
 
 
 
-   .R-A a{
+   .R-A a {
       justify-content: space-between;
       color: black;
       text-decoration: none;
@@ -426,13 +426,12 @@ display: flex;
       position: relative;
       left: 490%;
       top: 6px;
-      
+
    }
 
 
 
 
 
-   
+
 }
- 
