--- a/public/BookNow.css
+++ b/public/BookNow.css
@@ -225,3 +225,11 @@ scroll-behavior: smooth;
    padding: 2px;
    margin: 4px;
 }
+
+form label{
+  font-size: 35px;
+  height:50px;
+}
+form input{
+   font-size:20px;
+}
