--- a/public/BookNow.css
+++ b/public/BookNow.css
@@ -233,3 +233,95 @@ form label{
 form input{
    font-size:20px;
 }
+@media only screen and (max-width: 844px) and (min-width: 375px) {
+   .navbar {
+      width:360px;
+      flex-direction: column;
+      align-items: center;
+      height: auto;
+      padding: 5px;
+   }
+ 
+   .material-symbols-outlined {
+      position: static;
+      margin-top: -10px;
+   }
+ 
+   .left-A a,
+   .R-A a {
+      position: static;
+      font-size: 16px;
+      text-align: center;
+   }
+ 
+   .left-A a {
+      margin-bottom: 10px;
+   }
+ 
+   .R-A a {
+      margin-top: 10px;
+   }
+ 
+   .LOGO {
+      margin-right:70px;
+      margin-top:10px;
+      display: flex;
+      justify-content: center;
+   }
+ 
+   .LOGO h1 {
+      margin-left:17px;
+      top:3px;
+   }
+   .Area {
+      margin-left: 10px;
+      margin-right: 10px;
+      padding: 20px;
+      height:1000px;
+      top: 100px;
+   }
+
+   .stadium img {
+      width: 100%;
+   }
+
+   .cat label {
+      font-size: 30px;
+   }
+
+   .cat select {
+      font-size: 30px;
+      padding-top: 10px;
+   }
+
+   #BN {
+      width: 70%;
+      height: 50px;
+      left: 15%;
+      top: 140px;
+   }
+
+   #CN {
+      width: 70%;
+      height: 50px;
+      left: 15%;
+      top: 50px;
+   }
+
+   #PS {
+      font-size: 30px;
+      right: 0;
+      bottom: 100px;
+   }
+
+   .output {
+      right: 0;
+      bottom: 30px;
+      margin-right: 10px;
+   }
+
+   .output input {
+      width: 70%;
+      height: 30px;
+   }
+}
