--- a/public/Store.css
+++ b/public/Store.css
@@ -71,17 +71,6 @@ scroll-behavior: smooth;
  }
 
 
-
-
-
-
-
-
-
-
-
-
-
 main {
     height: 100%;
     width: 100%;
@@ -245,4 +234,49 @@ color: black;
     font-weight: lighter;
    font-family: "Open Sans", sans-serif;
    color: black
+}
+@media only screen and (max-width: 844px) and (min-width: 375px) {
+    .navbar {
+       width:360px;
+       flex-direction: column;
+       align-items: center;
+       height: auto;
+       padding: 5px;
+    }
+  
+    .material-symbols-outlined {
+       position: static;
+       margin-top: -10px;
+    }
+  
+    .left-A a,
+    .R-A a {
+       position: static;
+       font-size: 16px;
+       text-align: center;
+    }
+  
+    .left-A a {
+       margin-bottom: 10px;
+    }
+  
+    .R-A a {
+       margin-top: 10px;
+    }
+  
+    .LOGO {
+       margin-right:70px;
+       margin-top:10px;
+       display: flex;
+       justify-content: center;
+    }
+  
+    .LOGO h1 {
+       margin-left:17px;
+       top:3px;
+    }
+    .profile {
+        width: 95%;
+        padding: 20px 0px 10px 0px; 
+    }
 }
