--- a/public/Style.css
+++ b/public/Style.css
@@ -416,6 +416,7 @@ select {
 
 @media only screen and (max-width: 844px) and (min-width: 375px) {
    .navbar {
+      width:360px;
       flex-direction: column;
       align-items: center;
       height: auto;
@@ -450,7 +451,7 @@ select {
    }
 
    .LOGO h1 {
-      margin-left:20px;
+      margin-left:17px;
       top:3px;
    }
 
@@ -460,7 +461,7 @@ select {
    }
 
    .TEXT1 {
-      font-size: 36px;
+      font-size: 30px;
    }
 
    .TEXT2 h2 {
