--- a/public/potm.css
+++ b/public/potm.css
@@ -244,3 +244,133 @@ scroll-behavior: smooth;
   font-size: 15px;
   font-family: "Open Sans", sans-serif;
 }
+@media only screen and (max-width: 844px) and (min-width: 375px) {
+  .navbar {
+     width:360px;
+     flex-direction: column;
+     align-items: center;
+     height: auto;
+     padding: 5px;
+  }
+
+  .material-symbols-outlined {
+     position: static;
+     margin-top: -10px;
+  }
+
+  .left-A a,
+  .R-A a {
+     position: static;
+     font-size: 16px;
+     text-align: center;
+  }
+
+  .left-A a {
+     margin-bottom: 10px;
+  }
+
+  .R-A a {
+     margin-top: 10px;
+  }
+
+  .LOGO {
+     margin-right:70px;
+     margin-top:10px;
+     display: flex;
+     justify-content: center;
+  }
+
+  .LOGO h1 {
+     margin-left:17px;
+     top:3px;
+  }
+  .Starting-Home {
+    padding: 100px 10px 30px 0px;
+ }
+
+ .Winner {
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 10px;
+ }
+
+ .Winner h1 {
+    font-size: 18px;
+    padding-left: 5px;
+ }
+
+ .winner-content {
+    flex-direction: column;
+    align-items: center;
+ }
+
+ .Winner img {
+    width: 100%;
+    max-width: 400px;
+ }
+
+ .stats {
+    font-size: 20px;
+    padding-left: 0;
+    text-align: center;
+ }
+
+ .vote {
+    padding-top: 20px;
+    padding-left: 0;
+    text-align: center;
+ }
+
+ .area {
+  padding-right:10px;
+    padding-bottom: 20px;
+ }
+
+ .votearea {
+    height: auto;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 10px;
+ }
+
+ .Title h1 {
+    font-size: 24px;
+ }
+
+ .card-wrapper {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding-left: 0;
+    padding-top: 20px;
+ }
+
+ .card {
+    width: 90%;
+    margin: 40px 0; 
+    padding: 60px 30px 10px 10px;
+ }
+
+ .card-front,
+ .card-back {
+    width: 100%;
+ }
+
+ #countdown {
+    width: 120%;
+    text-align: center;
+ }
+
+ #option {
+    width: 120%;
+    margin-bottom: 10px;
+    height: 60px;
+ }
+
+ #votebtn {
+    width: 120%;
+    height: 60px;
+ }
+}
