--- a/public/Admin.css
+++ b/public/Admin.css
@@ -11,15 +11,7 @@ body {
    width: 1300px;
    height: 300px;
    border-radius: 10px;
-   padding: 10px
-      /*top*/
-      50px
-      /*right*/
-      90px
-      /*bottom*/
-      0px
-      /*left*/
-   ;
+   padding: 10px/*top*/50px/*right*/90px/*bottom*/0px/*left*/;
    transition: 0.7s ease;
    margin-left: 500px;
    margin-top: 100px;
