--- a/views/Master.ejs
+++ b/views/Master.ejs
@@ -481,6 +481,7 @@
           <option value="72">3 Days</option>
           <option value="168">1 Week</option>
           <option value="720">1 Month</option>
+          <option value="720">Forever</option>
         </select>
         <button class="button_ban">Ban</button>
       </div>
@@ -496,6 +497,7 @@
           <option value="72">3 Days</option>
           <option value="168">1 Week</option>
           <option value="720">1 Month</option>
+          <option value="720">Forever</option>
         </select>
         <button class="button_ban">Ban</button>
       </div>
@@ -511,6 +513,7 @@
           <option value="72">3 Days</option>
           <option value="168">1 Week</option>
           <option value="720">1 Month</option>
+          <option value="720">Forever</option>
         </select>
         <button class="button_ban">Ban</button>
       </div>
@@ -526,6 +529,7 @@
           <option value="72">3 Days</option>
           <option value="168">1 Week</option>
           <option value="720">1 Month</option>
+          <option value="720">Forever</option>
         </select>
         <button class="button_ban">Ban</button>
       </div>
