Mongo DB Tickets
Added the schema for adding tickets

--- a/views/Admin.ejs
+++ b/views/Admin.ejs
@@ -3,12 +3,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel ="stylesheet" href="./public/Admin.css">
+    <link rel ="stylesheet" href="Admin.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script src =".public/script/adminScript.js" > </script>
-    <link rel="icon" href="./public/materials/Icon.png" type="image/x-icon">
+    <script src ="/script/adminScript.js" > </script>
+    <link rel="icon" href="materials/Icon.png" type="image/x-icon">
     <title>E7gzli-Admin</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
 </div>
     <div class="card">
         <div class="side_img">
-            <img id="pic" src="./public/materials/AHLY_ZAMALEK.png">
+            <img id="pic" src="/materials/AHLY_ZAMALEK.png">
     </div>
     <div class="side_info">
         <div class="info">
