--- a/views/Admin.ejs
+++ b/views/Admin.ejs
@@ -51,7 +51,7 @@
         <div class ="formation"  >
             <form action="/ADMIN/ADD-TICKETS" method="post">
                 <div class="container">
-                    <input type="file" id="file" name="image" accept="image/*" hidden>
+                    <input type="text" id="file" name="image" >
        
         <div class="img-area" data-img="">
 			<i class='bx bxs-cloud-upload icon'></i>
