Delete from Database
Gave the Admin the ability to delete event

--- a/views/ADDED.ejs
+++ b/views/ADDED.ejs
@@ -72,7 +72,10 @@
 
 
     <h1 id="h1">Added successfully ✅</h1>
-    <a id="button" href="javascript:void(0);" onclick="window.history.back();">BACK TO ADMIN</a>
+    <a id="button" href="/Admin" >BACK TO ADMIN</a>
+
+
+
 </body>
 
 </html>
