--- a/public/Admin.css
+++ b/public/Admin.css
@@ -1,31 +1,39 @@
-body{
+html,body
+{
+padding: 0%;
+margin: 0%;
+background-color: #1C1917;
+scroll-behavior: smooth;
+}
+   
 
-   background-color: #1C1917 ;
-   
-   
-   }
-   
+
+.content {
+   display: grid;
+   grid-template-columns: auto;
+   justify-content: center;
+   padding-left: 35%;
+   flex-direction: row;
+   flex-wrap: wrap;
+   margin-top: 25px;
+ }
     
-    .card {
-       background-color: white;
-       width: 70%;
-       height: 35%;
-       border-radius: 10px;
-       padding: 10px/*top*/ 50px/*right*/ 90px/*bottom*/ 0px/*left*/;
-       transition: 0.7s ease;
-       margin-left: 500px;
-       margin-top: 100px;
-      display: grid;
+   .card {
+      background-color: white;
+      width: 70%;
+      border-radius: 10px;
+      padding: 0px/*top*/ 600px/*right*/ 70px/*bottom*/ 0px/*left*/;
+      transition: 0.7s ease;
+      margin-top: 60px;
+      display:flex; 
       grid-template-columns: auto auto;
-   
-   
     }
-   
    
    
     .side_info{
        margin-top: 50px;
        margin-left: 50px;
+      
      }
     
      .icon{
@@ -34,8 +42,8 @@ body{
      .side_img img {
     
         border-radius: 3%;
-        width: 430px; 
-        height: 116%; 
+        width: 450px; 
+        height: 123%; 
         
       
     }
@@ -61,16 +69,13 @@ body{
      }
     
      .button_dist{
-       
        position: relative;
-        left: 160px;
-        
-        padding-bottom: px;
+        left: 40px;
      }
     
      .button_dist h4{
        position: relative;
-       top: 0px;
+       top: 40px;
       
     
     
@@ -93,11 +98,10 @@ body{
      
    }
    
-     .booking-btn {
+     .delete-btn {
       position: relative;
-      left: 100px;
-        
-        padding: 30px 90px;    
+      left: 160px;
+        padding: 20px 50px;    
         background-color: #EC4899;
         color: white;
         border: none;
@@ -132,20 +136,18 @@ body{
            .left-side{
    
    
-   
    flex-direction: column;
    
    
    background-color:#D9D9D9 ;
    
-   width: 25%;
-   
+   width: 27%;
    padding: 20px;
    box-sizing: border-box;
    margin-top: 0;
    position: fixed;
    height: 100%;
-   overflow-y: auto;
+   overflow-x:hidden;
    flex-direction: column;
    display: block;
    }
